feat: 添加主题切换功能，集成 Pinia 状态管理，更新请求配置，新增 API 接口和图标资源

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 :root {
+  --color-text-white: #000000;
+  --color-gray-50: #f7fafc;
+  --color-bg-white: #ffff;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -17,6 +20,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.dark {
+  --color-text-white: #ffff;
+  --color-bg-white: #000000;
+  --color-gray-50: #1a202c;
+  /* 暗色模式 */
+}
+
 body {
   margin: 0;
   min-width: 320px;
@@ -25,7 +35,6 @@ body {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
     background-color: #ffffff;
   }
 }
